Primer commit de la PWA AguaYaa

--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "add": "2.0.6",
     "axios": "^1.12.2",
-    "framer-motion": "^12.23.12",
+    "commit": "0.0.4",
+    "framer-motion": "11.18.2",
+    "git": "0.1.5",
+    "notistack": "^3.0.2",
+    "package-lock.json": "1.0.0",
+    "package.json": "2.0.1",
+    "push": "0.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "swiper": "^12.0.1",
+    "swiper": "11.2.10",
     "vite-plugin-pwa": "^1.0.3",
     "zustand": "^5.0.8"
   },
